<resources>
    <string name="app_name">Scoutr</string>
    <string name="title_activity_home__page__map_">Scoutr</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_image_checkbox">ImageCheckBoxActivity</string>
    <string name="Scoutr_button">Scoutr.</string>
    <string name="title_activity_camera">Camera</string>
    <string name="checklist_accessibility">Easily Accessible</string>
    <string name="checklist_power">Power Mains Available</string>
    <string name="checklist_wc">Wash Closet Nearby</string>
    <string name="checklist_wifi">Free Wifi Nearby</string>
    <string name="checklist_sun">Optimal Sun Hours</string>
    <string name="enter_location">Enter Location Name</string>
</resources>
